add normy experiment

--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@hono/zod-validator": "^0.2.2",
     "@kobalte/core": "^0.13.3",
     "@lucide/lab": "^0.1.2",
+    "@normy/core": "^0.10.0",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/solid-query": "^5.45.0",
+    "@tanstack/solid-query-persist-client": "^5.50.2",
     "@types/lodash-es": "^4.17.12",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hono": "^4.4.6",
+    "idb-keyval": "^6.2.1",
     "lodash-es": "^4.17.21",
     "lucide-solid": "^0.395.0",
     "nanoid": "^5.0.7",
@@ -32,6 +35,7 @@
     "vinxi": "^0.3.12",
     "vite": "^5.3.3",
     "vite-plugin-markdown": "^2.2.0",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-solid": "^2.10.2",
     "zod": "^3.23.8"
   },
