--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "serve": "^14.2.3",
+    "signaldb": "^0.11.0",
     "solid-js": "^1.8.17",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
