--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "format": "prettier -w .",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -29,7 +30,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "replicache": "^14.2.2",
     "serve": "^14.2.3",
-    "signaldb": "^0.12.2",
+    "signaldb": "^0.20.0",
+    "signaldb-plugin-solid": "^1.0.5",
     "solid-js": "^1.8.18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
