--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@kobalte/core": "^0.13.3",
     "@lucide/lab": "^0.1.2",
     "@normy/core": "^0.10.0",
+    "@signaldb/core": "^1.3.1",
+    "@signaldb/indexeddb": "^1.0.0",
+    "@signaldb/solid": "^1.0.0",
+    "@signaldb/sync": "^1.2.0",
     "@solidjs/router": "^0.14.1",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/solid-query": "^5.51.2",
@@ -20,7 +24,6 @@
     "clsx": "^2.1.1",
     "hono": "^4.4.13",
     "hono-sessions": "^0.5.8",
-    "idb-keyval": "^6.2.1",
     "lodash-es": "^4.17.21",
     "lucide-solid": "^0.408.0",
     "nanoid": "^5.0.7",
@@ -30,8 +33,6 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "replicache": "^14.2.2",
     "serve": "^14.2.3",
-    "signaldb": "^0.20.1",
-    "signaldb-plugin-solid": "^1.1.0",
     "solid-js": "^1.8.18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
